== trunk

* Add error-handling for video upload errors. [FiXato]
* Add error-handling for authentication errors from YouTube during video upload. [FiXato]
* Add support for making videos private upon video upload. [FiXato]
* Fix issue with REXML parsing of video upload response. [FiXato]
* Fix issue with response code comparison. [FiXato]
* Authcode is now retrieved for video uploads. [FiXato]
* Add basic support for uploading videos [thanks Joe Damato]
* Add basic support for related videos [tmm1]
* Improve docs for order_by attribute [thanks Jason Arora]
* Added support for the "racy" parameter (choices are "include" or "exclude") [thanks Jason Arora]
* Add missing attribute reader for description [tmm1]
* Fix issue with missing yt:statistics and viewCount [tmm1]
* Allow Client#video_by to take either a url or a video id [tmm1]

== 0.4.1 / 2008-02-11

* Added 3GPP video format [shane]
* Fixed tests [shane]

== 0.4.0 / 2007-12-18

* Fixed API projection in search URL [Pete Higgins]
* Fixed embeddable video searching [Pete Higgins]
* Fixed video embeddable detection [Pete Higgins]
* Fixed unique id hyphen detection [Pete Higgins, Chris Taggart]

== 0.3.0 / 2007-09-17

* Initial public release
  * Birthday!
