@@ -1,10 +1,10 @@
-[ ] stub out http request/response cycle for tests
+[ ] stub out http request/response cycle for tests (partially done in test_upload, need to do the same for pre-existing tests [msp])
 [ ] consider defaulting the client to no-logger, rather than outputting to STDOUT.
 [ ] allow specifying values as single items where you don't need to wrap in a list, e.g. :tags => :chickens instead of :tags => [ 'chickens' ]
 [ ] make sure symbols will work as well as tags everywhere (again, :tags => :chickens is same as :tags => 'chickens')
 [ ] figure out better structure for class/file (either rename request/video_search.rb or split into one class per file again)
 [ ] restore spaces after method def names
-[ ] use a proxy for testing with static sample result xml so we have repeatable tests
+[ ] use a proxy for testing with static sample result xml so we have repeatable tests (see above [msp])
 [ ] Clean up tests using Shoulda to define contexts
 [ ] Consolidate requires
 [ ] Allow :category and :categories for query DSL
