@@ -16,5 +16,5 @@ require File.dirname(__FILE__) + '/youtube_g/request/video_search'
 require File.dirname(__FILE__) + '/youtube_g/response/video_search'
 
 class YouTubeG
-  VERSION = '0.4.5'
+  VERSION = '0.4.7'
 end
