@@ -1,0 +1,51 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<entry xmlns='http://www.w3.org/2005/Atom' xmlns:gml='http://www.opengis.net/gml'
+       xmlns:georss='http://www.georss.org/georss' xmlns:media='http://search.yahoo.com/mrss/'
+       xmlns:batch='http://schemas.google.com/gdata/batch' xmlns:yt='http://gdata.youtube.com/schemas/2007'
+       xmlns:gd='http://schemas.google.com/g/2005'>
+  <id>http://gdata.youtube.com/feeds/api/videos/7ARaD731I24</id>
+  <published>2008-07-11T05:02:24.501-07:00</published>
+  <updated>2008-07-11T05:02:24.501-07:00</updated>
+  <app:control xmlns:app='http://purl.org/atom/app#'>
+    <app:draft>yes</app:draft>
+    <yt:state name='processing'/>
+  </app:control>
+  <category scheme='http://gdata.youtube.com/schemas/2007/categories.cat' term='People' label='People &amp; Blogs'/>
+  <category scheme='http://schemas.google.com/g/2005#kind' term='http://gdata.youtube.com/schemas/2007#video'/>
+  <category scheme='http://gdata.youtube.com/schemas/2007/keywords.cat' term='test'/>
+  <category scheme='http://gdata.youtube.com/schemas/2007/keywords.cat' term='blah'/>
+  <category scheme='http://gdata.youtube.com/schemas/2007/keywords.cat' term='cool'/>
+  <title type='text'>Speechbox Test 07/11/2008 at 01:02PM</title>
+  <content type='text'>Speechbox test Uploaded on 07/11/2008 at 01:02PM</content>
+  <link rel='alternate' type='text/html' href='http://www.youtube.com/my_videos_edit?ns=1&amp;video_id=7ARaD731I24'/>
+  <link rel='http://gdata.youtube.com/schemas/2007#video.responses' type='application/atom+xml'
+        href='http://gdata.youtube.com/feeds/api/videos/7ARaD731I24/responses?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'/>
+  <link rel='http://gdata.youtube.com/schemas/2007#video.ratings' type='application/atom+xml'
+        href='http://gdata.youtube.com/feeds/api/videos/7ARaD731I24/ratings?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'/>
+  <link rel='http://gdata.youtube.com/schemas/2007#video.complaints' type='application/atom+xml'
+        href='http://gdata.youtube.com/feeds/api/videos/7ARaD731I24/complaints?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'/>
+  <link rel='http://gdata.youtube.com/schemas/2007#video.related' type='application/atom+xml'
+        href='http://gdata.youtube.com/feeds/api/videos/7ARaD731I24/related?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'/>
+  <link rel='self' type='application/atom+xml'
+        href='http://gdata.youtube.com/feeds/api/users/speechboxmatt/uploads/7ARaD731I24?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'/>
+  <link rel='edit' type='application/atom+xml'
+        href='http://gdata.youtube.com/feeds/api/users/speechboxmatt/uploads/7ARaD731I24?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'/>
+  <author>
+    <name>speechboxmatt</name>
+    <uri>http://gdata.youtube.com/feeds/api/users/speechboxmatt</uri>
+  </author>
+  <media:group>
+    <media:title type='plain'>Speechbox Test 07/11/2008 at 01:02PM</media:title>
+    <media:description type='plain'>Speechbox test Uploaded on 07/11/2008 at 01:02PM</media:description>
+    <media:keywords>blah, cool, test</media:keywords>
+    <media:category label='People &amp; Blogs' scheme='http://gdata.youtube.com/schemas/2007/categories.cat'>People
+    </media:category>
+    <media:content url='http://www.youtube.com/v/7ARaD731I24' type='application/x-shockwave-flash' medium='video'
+                   isDefault='true' expression='full' yt:format='5'/>
+  </media:group>
+  <gd:comments>
+    <gd:feedLink
+            href='http://gdata.youtube.com/feeds/api/videos/7ARaD731I24/comments?client=ytapi-Speechbox-SpeechboxBackend-tvjvg8lf-0'
+            countHint='0'/>
+  </gd:comments>
+</entry>
